2010-09-22  Adam Barth  <abarth@webkit.org>

        Reviewed by Eric Seidel.

        Fix comm-queue typo
        https://bugs.webkit.org/show_bug.cgi?id=46339

        We were missing a "self".  The real problem is that we didn't have an
        integration test for the failure case.

        * Scripts/webkitpy/tool/commands/queues.py:
        * Scripts/webkitpy/tool/commands/queues_unittest.py:

2010-09-22  Adam Barth  <abarth@webkit.org>

        Reviewed by Eric Seidel.

        commit-queue should log more detailed messages to the QueueStatusServer
        https://bugs.webkit.org/show_bug.cgi?id=46333

        When I created CommitQueueTask, I removed most of the previous logging.
        This patch adds back more detailed logging so folks can see their patch
        progress through the queue.

        * Scripts/webkitpy/tool/bot/commitqueuetask.py:
        * Scripts/webkitpy/tool/bot/commitqueuetask_unittest.py:
        * Scripts/webkitpy/tool/commands/queues.py:
        * Scripts/webkitpy/tool/commands/queues_unittest.py:

2010-09-22  Mihai Parparita  <mihaip@chromium.org>

        Reviewed by Darin Fisher.

        [Chromium] User style layout tests don't pass on Chromium
        https://bugs.webkit.org/show_bug.cgi?id=46069

        Fix a typo in LayoutTestController::addUserStyleSheet that was causing a
        crash the Chromium DRT. Pass InjectInExistingDocuments to mimic DRT
        behavior from other ports.

        * DumpRenderTree/chromium/LayoutTestController.cpp:
        (LayoutTestController::addUserStyleSheet):

2010-09-22  Brent Fulgham  <bfulgham@webkit.org>

        Reviewed by Martin Robinson.

        [WinCairo] Part 2: Update WebKitTestRunner and DumpRenderTree Build.
        https://bugs.webkit.org/show_bug.cgi?id=46303.

        * MiniBrowser/Configurations/MiniBrowserCFLite.vsprops: Added.
        * MiniBrowser/Configurations/MiniBrowserCommon.vsprops: Moved
        CoreFoundation-specific stuff to new MiniBrowserCoreFoundation